Add a basic settings implementation

--- a/Source/SkylineToolkit/SkylineToolkit.csproj
+++ b/Source/SkylineToolkit/SkylineToolkit.csproj
@@ -95,9 +95,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuadraticBezier2.cs" />
     <Compile Include="QuadraticBezier3.cs" />
+    <Compile Include="Settings\ModSettings.cs" />
     <Compile Include="SkylineGame.cs" />
     <Compile Include="SkylinePath.cs" />
     <Compile Include="SkylineToolkitMod.cs" />
+    <Compile Include="SkylineToolkitSettings.cs" />
     <Compile Include="StLoadingExtension.cs" />
     <Compile Include="Tuple.cs" />
     <Compile Include="UI\Button.cs" />
